--- a/lambda.cabal
+++ b/lambda.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lambda
   build-depends:       base >= 4.7 && < 5
+                     , parsec
                      , containers
                      , wl-pprint
   default-language:    Haskell2010
