--- a/typesandprogramminglanguages.cabal
+++ b/typesandprogramminglanguages.cabal
@@ -1,13 +1,13 @@
-name:                lambda
+name:                typesandprogramminglanguages
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            http://github.com/githubuser/lambda#readme
+homepage:            https://github.com/tomtitchener/TypesAndProgrammingLanguages#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author Here
+maintainer:          tomtitchener@verizon.net
+copyright:           2016 Tom Titchener
 category:            Web
 build-type:          Simple
 -- extra-source-files:
@@ -15,30 +15,30 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lambda
+  exposed-modules:     Untyped
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , containers
-                     , wl-pprint
+                     , wl-pprint 
   default-language:    Haskell2010
-
-executable lambda-exe
+  
+executable typesandprogramminglanguages-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , lambda
+                     , typesandprogramminglanguages
   default-language:    Haskell2010
 
-test-suite lambda-test
+test-suite typesandprogramminglanguages-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , lambda
+                     , typesandprogramminglanguages
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/lambda
+  location: https://github.com/tomtitchener/TypesAndProgrammingLanguages.git
