--- a/typesandprogramminglanguages.cabal
+++ b/typesandprogramminglanguages.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Untyped
+  other-modules:       Untyped.Data, Untyped.Eval, Untyped.Parse
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , containers
@@ -27,6 +28,7 @@ executable typesandprogramminglanguages-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , parsec
                      , typesandprogramminglanguages
   default-language:    Haskell2010
 
