--- a/typesandprogramminglanguages.cabal
+++ b/typesandprogramminglanguages.cabal
@@ -33,14 +33,16 @@ executable typesandprogramminglanguages-exe
   default-language:    Haskell2010
 
 test-suite typesandprogramminglanguages-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , typesandprogramminglanguages
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
-
+  hs-source-dirs:     test
+  main-is:            Spec.hs
+  type:               exitcode-stdio-1.0
+  ghc-options:        -threaded
+  build-depends:      base >4 && <5
+                    , doctest
+                    , doctest-discover
+                    , typesandprogramminglanguages
+  default-language:   Haskell2010
+  
 source-repository head
   type:     git
   location: https://github.com/tomtitchener/TypesAndProgrammingLanguages.git
